--- a/src/containers/Header/styles.module.scss
+++ b/src/containers/Header/styles.module.scss
@@ -17,19 +17,6 @@
   .logo {
     margin: spacing(0, 5, 0, 0);
     max-width: 500px;
-    @include transition;
-    &.closed {
-      max-width: 0px;
-      overflow: hidden;
-      opacity: 0;
-      transform: scale(0);
-      @include transition;
-    }
-    &Mobile {
-      margin: 0;
-      position: absolute;
-      left: calc(50% - 105px / 2);
-    }
   }
   .headerInput {
     height: 44px;
@@ -79,11 +66,24 @@
     display: none;
   }
 }
-@include middle-mobile {
+@include large-mobile {
   .headerInput {
     width: 100% !important;
   }
   .headerLeft {
-    // flex-direction: row-reverse;
+    flex-direction: row-reverse;
+    .logo {
+      margin: 0;
+      position: absolute;
+      left: calc(50% - 105px / 2);
+      @include transition;
+      &.closed {
+        max-width: 0px;
+        overflow: hidden;
+        opacity: 0;
+        transform: scale(0);
+        @include transition;
+      }
+    }
   }
 }
