--- a/src/styles/mixins/helpers.scss
+++ b/src/styles/mixins/helpers.scss
@@ -63,13 +63,13 @@
 }
 
 @mixin container {
-  margin: 0 auto;
+  margin: 0 auto !important;
   max-width: 1320px;
   width: 100%;
+  padding-left: 32px;
+  padding-right: 32px;
   @include default-screen{
     max-width: 1082px;
-    padding-left: 32px;
-    padding-right: 32px;
   }
   @include middle-tablet {
     padding-left: 20px;
