--- a/src/pages/Home/components/Trending/components/TitleDropdown/styles.module.scss
+++ b/src/pages/Home/components/Trending/components/TitleDropdown/styles.module.scss
@@ -65,6 +65,7 @@
   background-color: $light-white;
   li {
     padding: 8px 16px;
+    list-style: none;
     &:hover {
       background-color: $accent-2;
     }
