--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -68,6 +68,7 @@ $dark-0: #1C1C28;
 //gray
 $gray-6: #F2F2F2;
 $gray-50: #FDFDFD;
+$gray: #C4C4C4;
 
 //shadows
 $shadow-0: 0px 10px 10px -5px rgba(0, 0, 0, 0.04), 0px 20px 25px -5px rgba(0, 0, 0, 0.1);
