--- a/src/assets/styles/component-variables/_typography.scss
+++ b/src/assets/styles/component-variables/_typography.scss
@@ -8,6 +8,7 @@ $typographyColorsDefault: (
   "typography-dark-color": $dark,
   "typography-accent-color": $accent,
   "typography-light-3-color": $light-3,
+  "typography-iris-100-color": $iris-100,
 );
 
 $typographyColorsLight: (
@@ -18,4 +19,5 @@ $typographyColorsLight: (
   "typography-dark-color": $dark,
   "typography-accent-color": $accent,
   "typography-light-3-color": $light-3,
+  "typography-iris-100-color": $iris-100,
 );
