--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -18,6 +18,8 @@ $line-height-default: $main-unit * 2.25;
 
 $border-radius: $main-unit;
 
+$iris-100: #223DFF;
+
 $accent: #5D5FEF;
 $accent-2: #8384EA;
 $light-100: #E0E8FF;
