--- a/src/assets/styles/_normalize.scss
+++ b/src/assets/styles/_normalize.scss
@@ -53,7 +53,9 @@ div[id="root"] {
     align-items: center;
   }
 }
-
+*{
+  font-family: Inter, sans-serif;
+}
 //   // toastify styles
 //   .Toastify__toast-container {
 //   }
