--- a/src/assets/styles/component-variables/_typography.scss
+++ b/src/assets/styles/component-variables/_typography.scss
@@ -9,6 +9,7 @@ $typographyColorsDefault: (
   "typography-accent-color": $accent,
   "typography-light-3-color": $light-3,
   "typography-iris-100-color": $iris-100,
+  "typography-metal-800-color": $metal-800,
 );
 
 $typographyColorsLight: (
@@ -20,4 +21,5 @@ $typographyColorsLight: (
   "typography-accent-color": $accent,
   "typography-light-3-color": $light-3,
   "typography-iris-100-color": $iris-100,
+  "typography-metal-800-color": $metal-800,
 );
