--- a/src/components/Typography/styles.module.scss
+++ b/src/components/Typography/styles.module.scss
@@ -124,6 +124,10 @@
   color: var(--typography-iris-100-color);
 }
 
+.metal800{
+  color: var(--typography-metal-800-color);
+}
+
 .normalWeight {
   font-weight: 400;
 }
