--- a/src/pages/Home/components/Featured/styles.module.scss
+++ b/src/pages/Home/components/Featured/styles.module.scss
@@ -1,3 +1,5 @@
+@import '../../../../assets/styles/variables';
+@import '../../../../assets/styles/mixins';
 @import 'src/styles/helpers';
 
 .wrapper {
@@ -69,7 +71,7 @@
   background-repeat: no-repeat;
   border-radius: 50%;
   background-position: center center;
-  background-color: $light-white;
+  background-color: var(--swiper-default-background);
   &::after{
     content: '';
   }
