--- a/src/pages/Home/components/TopCollections/components/CollectionCard/styles.module.scss
+++ b/src/pages/Home/components/TopCollections/components/CollectionCard/styles.module.scss
@@ -1,9 +1,11 @@
+@import '../../../../../../assets/styles/variables';
+@import '../../../../../../assets/styles/mixins';
 @import 'src/styles/helpers';
 
 .collectionCard {
   @include flex(row, center, flex-start);
   padding: 18px 24px;
-  background-color: $light-white;
+  background-color: var(--collectionCard-default-background);
   max-width: 340px;
   width: 100%;
   max-height: 170px;
