trying to push in git

--- a/src/pages/Home/components/Featured/styles.module.scss
+++ b/src/pages/Home/components/Featured/styles.module.scss
@@ -56,15 +56,15 @@
   }
 }
 .swiper-button-prev {
-  left: 10px  ;
+  left: 10px;
   background: url('../../../../assets/img/icons/arrowLeft.svg');
 }
 .swiper-button-next {
   right: 10px;
   background: url('../../../../assets/img/icons/arrowRight.svg');
 }
-.swiper-button-prev, .swiper-button-next {
-
+.swiper-button-prev,
+.swiper-button-next {
   width: 58px;
   height: 58px;
   background-size: 8px 12px;
@@ -72,13 +72,12 @@
   border-radius: 50%;
   background-position: center center;
   background-color: var(--swiper-default-background);
-  &::after{
+  &::after {
     content: '';
   }
 
-  @include default-screen{
+  @include default-screen {
     top: 100%;
     bottom: 0;
   }
-
 }
