--- a/src/assets/styles/_normalize.scss
+++ b/src/assets/styles/_normalize.scss
@@ -1,6 +1,6 @@
 html,
 body,
-div[id="root"] {
+div[id='root'] {
   margin: 0;
   padding: 0;
   height: 100%;
@@ -24,7 +24,11 @@ div[id="root"] {
     box-sizing: border-box;
   }
 
-  h1, h2, h3, h4, h5 {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5 {
     margin: 0;
   }
 
@@ -33,7 +37,8 @@ div[id="root"] {
     // transition: $transition-time;
   }
 
-  ul, ol {
+  ul,
+  ol {
     margin: 0;
   }
 
@@ -53,8 +58,11 @@ div[id="root"] {
     align-items: center;
   }
 }
-*{
+* {
   font-family: Inter, sans-serif;
+}
+body {
+  overflow-x: hidden;
 }
 //   // toastify styles
 //   .Toastify__toast-container {
@@ -64,7 +72,7 @@ div[id="root"] {
 //     // box-shadow: 0px 4px 30px rgba(38, 150, 83, 0.4);
 //     border-radius: 30px;
 //     width: 100%;
-//     height: 60px; 
+//     height: 60px;
 //     &--success {
 //       background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), #269653;
 //     }
