--- a/src/containers/Footer/styles.module.scss
+++ b/src/containers/Footer/styles.module.scss
@@ -1,5 +1,67 @@
+@import '/src/styles/helpers';
+
 .footer {
   width: 100%;
-  height: 100px;
-  background-image: linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%);
+  padding: space(25, 0);
+}
+
+.container {
+  @include container;
+}
+
+.generalInfo {
+  margin: space(30, 0, 25, 0) !important;
+  @include flex(row, flex-start, space-between, wrap);
+  .info {
+    flex: 0 0 clamp(200px, 100%, 460px);
+  }
+}
+
+.socials {
+  @include flex(row, flex-start, space-between);
+  .documents {
+    text-decoration: underline;
+    text-decoration-color: currentColor;
+  }
+  &Items {
+    padding: space(20, 4);
+    @include flex(row, center, flex-start);
+    a {
+      margin-right: space(15);
+    }
+  }
+}
+
+.copyright {
+  margin-top: space(22) !important;
+  @include flex(row, center, space-between, wrap);
+  .privacy {
+    @include flex(row, center, flex-start);
+    a:not(:last-child) {
+      margin-right: space(48);
+    }
+  }
+}
+
+.line {
+  width: 100%;
+  opacity: 0.4;
+  color: var(--typography-dark-color);
+}
+
+@include large-mobile {
+  .generalInfo {
+    margin: space(20, 0, 25, 0) !important;
+  }
+  .socials {
+    @include flex(row, center, space-between);
+    &Items {
+      padding: space(0, 4);
+    }
+  }
+  .copyright{
+    .privacy{
+      margin-top: space(8);
+    }
+  }
 }
