top collection fixes

--- a/src/pages/Home/components/TopCollections/components/CollectionCard/styles.module.scss
+++ b/src/pages/Home/components/TopCollections/components/CollectionCard/styles.module.scss
@@ -13,12 +13,13 @@
 }
 
 .avatar {
-  margin: 0 16px 0 29px !important;
+  margin: 0 16px 0 12px !important;
 }
 .info{
   overflow: hidden;
   .name{
     @include ellipsis;
+    font-weight: 600;
   }
 }
 .price{
