--- a/src/assets/styles/component-variables/_typography.scss
+++ b/src/assets/styles/component-variables/_typography.scss
@@ -8,6 +8,7 @@ $typographyColorsDefault: (
   "typography-dark-color": $dark,
   "typography-accent-color": $accent,
   "typography-light-3-color": $light-3,
+  "typography-light-4-color": $light-4,
   "typography-iris-100-color": $iris-100,
   "typography-metal-800-color": $metal-800,
 );
@@ -20,6 +21,7 @@ $typographyColorsLight: (
   "typography-dark-color": $dark,
   "typography-accent-color": $accent,
   "typography-light-3-color": $light-3,
+  "typography-light-4-color": $light-4,
   "typography-iris-100-color": $iris-100,
   "typography-metal-800-color": $metal-800,
 );
