--- a/src/components/Typography/styles.module.scss
+++ b/src/components/Typography/styles.module.scss
@@ -120,6 +120,10 @@
   color: var(--typography-light-3-color);
 }
 
+.light4{
+  color: var(--typography-light-4-color);
+}
+
 .iris100{
   color: var(--typography-iris-100-color);
 }
