--- a/src/assets/styles/component-variables/_typography.scss
+++ b/src/assets/styles/component-variables/_typography.scss
@@ -6,6 +6,8 @@ $typographyColorsDefault: (
   "typography-error-color": $red,
   "typography-gray-6-color": $gray-6,
   "typography-dark-color": $dark,
+  "typography-dark-0-color": $dark-0,
+  "typography-dark-1-color": $dark-1,
   "typography-accent-color": $accent,
   "typography-light-3-color": $light-3,
   "typography-light-4-color": $light-4,
@@ -19,6 +21,8 @@ $typographyColorsLight: (
   "typography-error-color": $red,
   "typography-gray-6-color": $gray-6,
   "typography-dark-color": $dark,
+  "typography-dark-0-color": $dark-0,
+  "typography-dark-1-color": $dark-1,
   "typography-accent-color": $accent,
   "typography-light-3-color": $light-3,
   "typography-light-4-color": $light-4,
