--- a/src/components/ArtCard/styles.scss
+++ b/src/components/ArtCard/styles.scss
@@ -22,6 +22,7 @@
     width: var(--artcard-auction-block-width);
     border-radius: var(--artcard-auction-border-radius);
     @include flex(row, center, center);
+    padding: 1px 0;
   }
   &-promo{
     position: absolute;
