--- a/src/components/Typography/styles.module.scss
+++ b/src/components/Typography/styles.module.scss
@@ -112,6 +112,14 @@
   color: var(--typography-dark-color);
 }
 
+.dark0 {
+  color: var(--typography-dark-0-color);
+}
+
+.dark1 {
+  color: var(--typography-dark-1-color);
+}
+
 .accent {
   color: var(--typography-accent-color);
 }
