--- a/src/components/LikeButton/styles.scss
+++ b/src/components/LikeButton/styles.scss
@@ -6,7 +6,8 @@
   &.button {
     font-size: 16px;
     line-height: 24px;
-
+    font-weight: 600;
+    background-color: var(--button-like-default-background);
     &.md.startAdornmentPadding {
       padding: spacing(1.125, 1.75);
     }
