--- a/src/pages/Home/components/TopCollections/components/CollectionCard/styles.module.scss
+++ b/src/pages/Home/components/TopCollections/components/CollectionCard/styles.module.scss
@@ -10,6 +10,11 @@
   width: 100%;
   max-height: 170px;
   border-radius: 20px;
+  .index{
+    font-size: 20px;
+    line-height: 28px;
+    font-weight: 600;
+  }
 }
 
 .avatar {
