--- a/src/components/Typography/styles.module.scss
+++ b/src/components/Typography/styles.module.scss
@@ -136,6 +136,10 @@
   color: var(--typography-iris-100-color);
 }
 
+.metal700{
+  color: var(--typography-metal-700-color);
+}
+
 .metal800{
   color: var(--typography-metal-800-color);
 }
