--- a/src/assets/styles/component-variables/_typography.scss
+++ b/src/assets/styles/component-variables/_typography.scss
@@ -12,6 +12,7 @@ $typographyColorsDefault: (
   "typography-light-3-color": $light-3,
   "typography-light-4-color": $light-4,
   "typography-iris-100-color": $iris-100,
+  "typography-metal-700-color": $metal-700,
   "typography-metal-800-color": $metal-800,
 );
 
@@ -27,5 +28,6 @@ $typographyColorsLight: (
   "typography-light-3-color": $light-3,
   "typography-light-4-color": $light-4,
   "typography-iris-100-color": $iris-100,
+  "typography-metal-700-color": $metal-700,
   "typography-metal-800-color": $metal-800,
 );
