--- a/src/pages/Explore/components/Body/styles.module.scss
+++ b/src/pages/Explore/components/Body/styles.module.scss
@@ -3,11 +3,27 @@
 @import 'src/styles/helpers';
 
 .body {
-  display: grid;
-  grid-template-columns: 190px 1fr;
-  margin-top: space(36) !important;
+  @include flex(column, center, center);
+  &Top {
+    @include flex(row, center, flex-start);
+    width: 100%;
+    .filters {
+      background-color: var(--filters-button-background-color);
+      display: none;
+    }
+  }
+  &Content {
+    display: grid;
+    grid-template-columns: 190px 1fr;
+    margin-top: space(36) !important;
+    width: 100%;
+  }
   .bodyFilters {
     padding-right: space(24);
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0;
+    height: fit-content;
     .dropdown {
       margin-bottom: space(8);
       .dropdownBody {
@@ -19,8 +35,14 @@
       @include flex(row, center, center);
       gap: 8px;
     }
-    .auction{
+    .auction {
       margin-top: space(17);
+    }
+    &Head {
+      @include flex(row, center, space-between);
+      .cross {
+        display: none;
+      }
     }
   }
   &Results {
@@ -56,6 +78,47 @@
     &Items {
       @include flex(row, center, flex-start);
       width: 100%;
+    }
+  }
+}
+@include middle-tablet {
+  .body {
+    .card {
+      margin: 0 auto;
+    }
+  }
+}
+@include large-mobile {
+  .body {
+    .bodyTop {
+      margin-top: space(24);
+      .filters {
+        display: flex;
+      }
+    }
+    &Content {
+      @include flex(column, center, center);
+    }
+    .bodyFilters {
+      position: fixed;
+      padding: 0;
+      opacity: 0;
+      top: 100%;
+      transform: scale(1);
+      &.active {
+        opacity: 1;
+        top: 0;
+        left: 0;
+        width: 100%;
+        width: 100%;
+        background-color: var(--filters-default-background-color);
+        padding: 16px 24px 24px;
+        z-index: 100;
+        .cross {
+          display: block;
+          cursor: pointer;
+        }
+      }
     }
   }
 }
