--- a/src/components/Typography/styles.module.scss
+++ b/src/components/Typography/styles.module.scss
@@ -136,6 +136,10 @@
   color: var(--typography-iris-100-color);
 }
 
+.metal600{
+  color: var(--typography-metal-600-color);
+}
+
 .metal700{
   color: var(--typography-metal-700-color);
 }
