--- a/src/containers/Header/styles.module.scss
+++ b/src/containers/Header/styles.module.scss
@@ -7,6 +7,7 @@
   padding-top: 24px;
   @include flex(row, center, space-between);
   @include container;
+  max-width: 1320px;
   &Left,
   &Right {
     @include flex(row, center, flex-start);
