--- a/src/pages/Explore/components/Body/styles.module.scss
+++ b/src/pages/Explore/components/Body/styles.module.scss
@@ -144,6 +144,7 @@
     }
     .total{
       flex-direction: column;
+      align-items: flex-start;
       &Text{
         margin-right: 0;
         margin-bottom: space(8);
