--- a/src/pages/Home/components/Featured/styles.module.scss
+++ b/src/pages/Home/components/Featured/styles.module.scss
@@ -56,11 +56,11 @@
   }
 }
 .swiper-button-prev {
-  left: -10px;
+  left: -64px;
   background: url('../../../../assets/img/icons/arrowLeft.svg');
 }
 .swiper-button-next {
-  right: -10px;
+  right: -64px;
   background: url('../../../../assets/img/icons/arrowRight.svg');
 }
 .swiper-button-prev,
@@ -76,12 +76,12 @@
     content: '';
   }
 
-  @include default-screen {
+  @include middle-screen {
     top: 100%;
     bottom: 0;
   }
 }
-@include default-screen {
+@include middle-screen {
   .swiper-button-prev {
     left: 10px;
   }
