add clear filter chips

--- a/src/components/Typography/styles.module.scss
+++ b/src/components/Typography/styles.module.scss
@@ -136,6 +136,10 @@
   color: var(--typography-iris-100-color);
 }
 
+.metal50{
+  color: var(--typography-metal-50-color);
+}
+
 .metal600{
   color: var(--typography-metal-600-color);
 }
