userPopover icon color

--- a/src/assets/styles/component-variables/_user-popover.scss
+++ b/src/assets/styles/component-variables/_user-popover.scss
@@ -7,6 +7,7 @@ $userPopoverColorsDefault:(
   'userPopover-edit-background-color': $metal-100,
   'userPopover-edit-border-radius': 10px,
   'userPopover-edit-icon-hover': $accent-2,
+  'userPopover-link-icon-avctive': $accent,
 
   'userPopover-default-border-color': $card-border,
   'userPopover-border-width': 1px,
