mobile clipboard text copy

--- a/src/pages/Home/components/TopCollections/styles.module.scss
+++ b/src/pages/Home/components/TopCollections/styles.module.scss
@@ -29,6 +29,7 @@
   grid-column-gap: 24px;
   grid-row-gap: 24px;
   grid-auto-flow: row;
+  padding: 0;
 
   @include default-screen {
     @include flex(row, center, center);
