fix focus-visible outline

--- a/src/assets/styles/_normalize.scss
+++ b/src/assets/styles/_normalize.scss
@@ -1,4 +1,4 @@
-*{
+* {
   font-family: Inter, sans-serif;
 }
 
@@ -21,6 +21,9 @@ div[id='root'] {
     font-family: inherit;
     font-size: inherit;
     line-height: inherit;
+    &:focus-visible {
+      outline: none;
+    }
   }
   *,
   ::after,
