footer socials margin

--- a/src/containers/Footer/styles.module.scss
+++ b/src/containers/Footer/styles.module.scss
@@ -26,8 +26,8 @@
   &Items {
     padding: space(20, 4);
     @include flex(row, center, flex-start);
-    a {
-      margin-right: space(15);
+    .socialsItem + .socialsItem {
+      margin-left: space(11);
     }
   }
 }
@@ -59,8 +59,8 @@
       padding: space(0, 4);
     }
   }
-  .copyright{
-    .privacy{
+  .copyright {
+    .privacy {
       margin-top: space(8);
     }
   }
