main page fixes

--- a/src/pages/Home/components/Featured/styles.module.scss
+++ b/src/pages/Home/components/Featured/styles.module.scss
@@ -6,7 +6,6 @@
   position: relative;
   width: 100%;
   @include container;
-  padding-top: space(116);
 }
 
 .title {
@@ -72,6 +71,7 @@
   border-radius: 50%;
   background-position: center center;
   background-color: var(--swiper-default-background);
+  top: calc(50% - 58px / 2);
   &::after {
     content: '';
   }
@@ -87,5 +87,10 @@
   }
   .swiper-button-next {
     right: 10px;
+  }
+}
+@include default-screen {
+  .wrapper {
+    padding-top: space(50);
   }
 }
