--- a/src/pages/Home/components/Trending/styles.module.scss
+++ b/src/pages/Home/components/Trending/styles.module.scss
@@ -72,6 +72,7 @@
   border-radius: 50%;
   background-position: center center;
   background-color: var(--swiper-default-background);
+  top: calc(50% - 58px / 2);
   &::after {
     content: '';
   }
