--- a/src/assets/styles/_color-themes.scss
+++ b/src/assets/styles/_color-themes.scss
@@ -26,6 +26,7 @@
 @import './component-variables/checkbox-button';
 @import './component-variables/filters';
 @import './component-variables/chips';
+@import './component-variables/create-card';
 
 :root {
 	$colors:(
@@ -56,7 +57,8 @@
 		$collectionCardColorsDefault,
 		$checkboxButtonColorsDefault,
 		$filtersColorsDefault,
-		$chipsColorsDefault
+		$chipsColorsDefault,
+		$createCardColorsDefault,
 	);
 
 	@each $key_name in $colors {
