home page mobile fixes

--- a/src/assets/styles/_normalize.scss
+++ b/src/assets/styles/_normalize.scss
@@ -70,6 +70,10 @@ div[id='root'] {
 }
 body {
   overflow-x: hidden;
+
+  .app {
+    overflow-x: hidden;
+  }
 }
 //   // toastify styles
 //   .Toastify__toast-container {
