--- a/src/assets/styles/component-variables/_title-dropdown.scss
+++ b/src/assets/styles/component-variables/_title-dropdown.scss
@@ -3,9 +3,12 @@
 $titleDropdownColorsDefault: (
   "titleDropdown-default-background": $light-white,
   "titleDropdown-default-option-hover": $accent-2,
+  "titleDropdown-default-body-shadow": $shadow-2,
+  
 );
 
 $titleDropdownColorsLight: (
   "titleDropdown-default-background": $light-white,
   "titleDropdown-default-option-hover": $accent-2,
+  "titleDropdown-default-body-shadow": $shadow-2,
 );
