--- a/src/assets/styles/component-variables/_typography.scss
+++ b/src/assets/styles/component-variables/_typography.scss
@@ -9,6 +9,7 @@ $typographyColorsDefault: (
   "typography-dark-0-color": $dark-0,
   "typography-dark-1-color": $dark-1,
   "typography-accent-color": $accent,
+  "typography-light-1-color": $light-1,
   "typography-light-3-color": $light-3,
   "typography-light-4-color": $light-4,
   "typography-iris-100-color": $iris-100,
@@ -27,6 +28,7 @@ $typographyColorsLight: (
   "typography-dark-0-color": $dark-0,
   "typography-dark-1-color": $dark-1,
   "typography-accent-color": $accent,
+  "typography-light-1-color": $light-1,
   "typography-light-3-color": $light-3,
   "typography-light-4-color": $light-4,
   "typography-iris-100-color": $iris-100,
