--- a/src/components/Typography/styles.module.scss
+++ b/src/components/Typography/styles.module.scss
@@ -124,6 +124,10 @@
   color: var(--typography-accent-color);
 }
 
+.light1 {
+  color: var(--typography-light-1-color);
+}
+
 .light3 {
   color: var(--typography-light-3-color);
 }
