--- a/src/pages/Explore/components/Body/styles.module.scss
+++ b/src/pages/Explore/components/Body/styles.module.scss
@@ -58,6 +58,7 @@
     display: grid;
     justify-content: center;
     grid-gap: 24px;
+    height: fit-content;
     .card {
       max-width: 264px;
     }
