--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -75,6 +75,7 @@ $gray: #C4C4C4;
 
 //shadows
 $shadow-0: 0px 10px 10px -5px rgba(0, 0, 0, 0.04), 0px 20px 25px -5px rgba(0, 0, 0, 0.1);
+$shadow-2: 0px 25px 50px -12px rgba(0, 0, 0, 0.25);
 
 //background
 $main-background: #F3F3F5;
