--- a/src/containers/Layout/styles.module.scss
+++ b/src/containers/Layout/styles.module.scss
@@ -9,8 +9,8 @@
     @include flex(column, center, flex-start);
     .main {
       width: 100%;
-      @include container;
-      padding-top: space(65);
+      // @include container;
+      // padding-top: space(65);
     }
     .footer {
       margin-top: auto;
