--- a/src/pages/Home/components/Categories/styles.module.scss
+++ b/src/pages/Home/components/Categories/styles.module.scss
@@ -63,8 +63,10 @@
   &Text {
     font-size: 20px;
     position: absolute;
-    top: calc(50% - 30px/2);
-    left: calc(50% - 127.77px/2);
+    transform: translate(-50%, -50%);
+    white-space: nowrap;
+    top: 50%;
+    left: 50%;
   }
 }
 
