add backend types and file uploader

--- a/src/assets/styles/_color-themes.scss
+++ b/src/assets/styles/_color-themes.scss
@@ -27,6 +27,8 @@
 @import './component-variables/filters';
 @import './component-variables/chips';
 @import './component-variables/create-card';
+@import './component-variables/create-form';
+@import './component-variables/file-uploader';
 
 :root {
 	$colors:(
@@ -59,6 +61,8 @@
 		$filtersColorsDefault,
 		$chipsColorsDefault,
 		$createCardColorsDefault,
+		$createFormColorsDefault,
+		$fileUploaderColorsDefault,
 	);
 
 	@each $key_name in $colors {
