--- a/src/components/Typography/styles.module.scss
+++ b/src/components/Typography/styles.module.scss
@@ -152,6 +152,10 @@
   color: var(--typography-metal-800-color);
 }
 
+.base900{
+  color: var(--typography-base-900-color);
+}
+
 .normalWeight {
   font-weight: 400;
 }
