--- a/src/components/FileUploader/styles.module.scss
+++ b/src/components/FileUploader/styles.module.scss
@@ -2,6 +2,46 @@
 @import '../../assets/styles/mixins';
 @import 'src/styles/helpers';
 
-.fileUploader { 
+.fileUploader {
+  width: 100%;
+  height: 512px;
+  border-radius: 20px;
+  border: var(--fileUploader-border);
+  background: var(--fileUploader-background);
+  cursor: pointer;
+  @include transition;
+  @include flex(row, center, center);
+  &:hover {
+    border: var(--fileUploader-hover-border);
+    background: var(--fileUploader-hover-background);
+    .content {
+      .icon {
+        transform: translateY(-10px);
+        animation-play-state: paused;
+      }
+    }
+  }
+  .content {
+    padding: space(0, 72);
+    @include flex(column, center, flex-start);
+    .icon {
+      margin-bottom: space(20);
+      animation: shake-icon 5s ease-in-out infinite;
+    }
+    .title {
+      margin-bottom: space(14);
+    }
+  }
+}
 
+@keyframes shake-icon {
+  0% {
+    transform: translateY(0);
+  }
+  10% {
+    transform: translateY(-10px);
+  }
+  20% {
+    transform: translateY(0);
+  }
 }
