--- a/src/assets/styles/component-variables/_input.scss
+++ b/src/assets/styles/component-variables/_input.scss
@@ -2,7 +2,7 @@
 
 $inputColorsDefault: (
   'input-default-background': $light-8,
-  'input-default-label': $light-3,
+  'input-default-label': $metal-700,
   'input-default-color': $light-3,
   'input-default-caret': currentColor,
   'input-default-border': $light-5,
@@ -10,7 +10,7 @@ $inputColorsDefault: (
   'input-default-icon': currentColor,
 
   'input-hover-background': $light-8,
-  'input-hover-label': $light-2,
+  'input-hover-label':  $metal-700,
   'input-hover-color': $light-2,
   'input-hover-caret': currentColor,
   'input-hover-border': $light-3,
@@ -18,7 +18,7 @@ $inputColorsDefault: (
   'input-hover-icon': currentColor,
 
   'input-focus-background': $light-8,
-  'input-focus-label': $light-2,
+  'input-focus-label': $metal-700,
   'input-focus-color': $light-2,
   'input-focus-border': $accent,
   'input-focus-caret': $accent,
@@ -26,7 +26,7 @@ $inputColorsDefault: (
   'input-focus-icon': $accent,
 
   'input-disabled-background': $light-8,
-  'input-disabled-label': $light-3,
+  'input-disabled-label': $metal-700,
   'input-disabled-color': $light-3,
   'input-disabled-caret': currentColor,
   'input-disabled-border': $light-5,
@@ -52,7 +52,7 @@ $inputColorsDefault: (
 
 $inputColorsLight: (
   'input-default-background': $light-8,
-  'input-default-label': $light-3,
+  'input-default-label': $metal-700,
   'input-default-color': $light-3,
   'input-default-caret': currentColor,
   'input-default-border': $light-5,
@@ -60,7 +60,7 @@ $inputColorsLight: (
   'input-default-icon': currentColor,
 
   'input-hover-background': $light-8,
-  'input-hover-label': $light-2,
+  'input-hover-label':  $metal-700,
   'input-hover-color': $light-2,
   'input-hover-caret': currentColor,
   'input-hover-border': $light-3,
@@ -68,7 +68,7 @@ $inputColorsLight: (
   'input-hover-icon': currentColor,
 
   'input-focus-background': $light-8,
-  'input-focus-label': $light-2,
+  'input-focus-label': $metal-700,
   'input-focus-color': $light-2,
   'input-focus-border': $accent,
   'input-focus-caret': $accent,
@@ -76,14 +76,14 @@ $inputColorsLight: (
   'input-focus-icon': $accent,
 
   'input-disabled-background': $light-8,
-  'input-disabled-label': $light-3,
+  'input-disabled-label': $metal-700,
   'input-disabled-color': $light-3,
   'input-disabled-caret': currentColor,
   'input-disabled-border': $light-5,
   'input-disabled-width': 1px,
   'input-disabled-icon': currentColor,
 
-  'input-error-background': rgba($red, 0.05),
+  'input-error-background': rgba($red, 0.2),
   'input-error-label': $red,
   'input-error-color': $red,
   'input-error-caret': currentColor,
@@ -91,7 +91,7 @@ $inputColorsLight: (
   'input-error-width': 2px,
   'input-error-icon': currentColor,
 
-  'input-success-background': rgba($green, 0.05),
+  'input-success-background': rgba($green, 0.2),
   'input-success-label': $green,
   'input-success-color': $green,
   'input-success-caret': currentColor,
