color_themes comma fix

--- a/src/assets/styles/_color-themes.scss
+++ b/src/assets/styles/_color-themes.scss
@@ -64,7 +64,7 @@
 		$chipsColorsDefault,
 		$createCardColorsDefault,
 		$searchCollectionColorsDefault,
-		$scrollbarColorsDefault
+		$scrollbarColorsDefault,
 		$createFormColorsDefault,
 		$fileUploaderColorsDefault,
 	);
