clear filters minMax  price

--- a/src/containers/Filters/styles.module.scss
+++ b/src/containers/Filters/styles.module.scss
@@ -69,6 +69,19 @@
     margin-bottom: space(24);
   }
 }
+.filters::-webkit-scrollbar {
+  width: 8px;
+}
+.filters::-webkit-scrollbar-thumb {
+  background-color: var(--scrollbar-default-background-color);
+  border: var(--scrollbar-border-width) solid var(--scrollbar-default-border-color);
+  box-sizing: border-box;
+  border-radius: var(--scrollbar-border-radius);
+  width: 8px;
+}
+.filters::-webkit-scrollbar-track {
+  background: transparent;
+}
 @include large-mobile {
   .filters {
     position: fixed;
@@ -76,6 +89,7 @@
     opacity: 0;
     top: 100%;
     transform: scale(1);
+    height: 100%;
     &.active {
       opacity: 1;
       top: 0;
