copied status position

--- a/src/pages/Home/components/Banner/styles.module.scss
+++ b/src/pages/Home/components/Banner/styles.module.scss
@@ -39,6 +39,9 @@
   }
 }
 @include default-screen {
+  .banner{
+    margin-top: space(48) !important;
+  }
   .bannerBody {
     flex-direction: column;
     align-items: center;
