--- a/src/assets/styles/component-variables/_input.scss
+++ b/src/assets/styles/component-variables/_input.scss
@@ -3,7 +3,7 @@
 $inputColorsDefault: (
   'input-default-background': $light-8,
   'input-default-label': $metal-700,
-  'input-default-color': $light-3,
+  'input-default-color': $base-700,
   'input-default-caret': currentColor,
   'input-default-border': $light-5,
   'input-default-width': 1px,
@@ -11,7 +11,7 @@ $inputColorsDefault: (
 
   'input-hover-background': $light-8,
   'input-hover-label':  $metal-700,
-  'input-hover-color': $light-2,
+  'input-hover-color': $base-700,
   'input-hover-caret': currentColor,
   'input-hover-border': $light-3,
   'input-hover-width': 1px,
@@ -19,7 +19,7 @@ $inputColorsDefault: (
 
   'input-focus-background': $light-8,
   'input-focus-label': $metal-700,
-  'input-focus-color': $light-2,
+  'input-focus-color': $base-700,
   'input-focus-border': $accent,
   'input-focus-caret': $accent,
   'input-focus-width': 2px,
@@ -27,7 +27,7 @@ $inputColorsDefault: (
 
   'input-disabled-background': $light-8,
   'input-disabled-label': $metal-700,
-  'input-disabled-color': $light-3,
+  'input-disabled-color': $base-700,
   'input-disabled-caret': currentColor,
   'input-disabled-border': $light-5,
   'input-disabled-width': 1px,
