add NftPage desktop layout

--- a/src/assets/styles/_color-themes.scss
+++ b/src/assets/styles/_color-themes.scss
@@ -31,6 +31,7 @@
 @import './component-variables/scrollbar';
 @import './component-variables/create-form';
 @import './component-variables/file-uploader';
+@import './component-variables/nft-page';
 
 :root {
 	$colors:(
@@ -67,6 +68,7 @@
 		$scrollbarColorsDefault,
 		$createFormColorsDefault,
 		$fileUploaderColorsDefault,
+		$nftpageColorsDefault
 	);
 
 	@each $key_name in $colors {
