--- a/src/components/Typography/styles.module.scss
+++ b/src/components/Typography/styles.module.scss
@@ -144,6 +144,10 @@
   color: var(--typography-metal-50-color);
 }
 
+.metal400{
+  color: var(--typography-metal-400-color);
+}
+
 .metal600{
   color: var(--typography-metal-600-color);
 }
