--- a/src/assets/styles/component-variables/_typography.scss
+++ b/src/assets/styles/component-variables/_typography.scss
@@ -9,11 +9,13 @@ $typographyColorsDefault: (
   "typography-dark-0-color": $dark-0,
   "typography-dark-1-color": $dark-1,
   "typography-accent-color": $accent,
+  "typography-light-color": $light-white,
   "typography-light-1-color": $light-1,
   "typography-light-3-color": $light-3,
   "typography-light-4-color": $light-4,
   "typography-iris-100-color": $iris-100,
   "typography-metal-50-color": $metal-50,
+  "typography-metal-400-color": $metal-400,
   "typography-metal-600-color": $metal-600,
   "typography-metal-700-color": $metal-700,
   "typography-metal-800-color": $metal-800,
@@ -29,11 +31,13 @@ $typographyColorsLight: (
   "typography-dark-0-color": $dark-0,
   "typography-dark-1-color": $dark-1,
   "typography-accent-color": $accent,
+  "typography-light-color": $light-white,
   "typography-light-1-color": $light-1,
   "typography-light-3-color": $light-3,
   "typography-light-4-color": $light-4,
   "typography-iris-100-color": $iris-100,
   "typography-metal-50-color": $metal-50,
+  "typography-metal-400-color": $metal-400,
   "typography-metal-600-color": $metal-600,
   "typography-metal-700-color": $metal-700,
   "typography-metal-800-color": $metal-800,
