--- a/src/components/TabBar/styles.scss
+++ b/src/components/TabBar/styles.scss
@@ -9,8 +9,8 @@
   overflow-x: auto;
   &__body {
     width: fit-content;
-    margin: 0 auto;
-    @include flex(row, center, center);
+    // margin: 0 auto;
+    @include flex(row, center, flex-start);
     &-tab {
       padding: 19px 0;
       color: var(--tab-default);
@@ -22,26 +22,30 @@
       overflow: hidden;
       @include flex(row, center, flex-start);
       @include transition;
-      &-icon{
+      cursor: pointer;
+      &-icon {
         margin-right: 8px;
-        &__wrapper{
+        &__wrapper {
           width: 24px;
           height: 24px;
           @include flex(row, center, flex-start);
         }
       }
       &:hover {
-        color: var(--tab-hover);;
+        color: var(--tab-hover);
       }
       &.active-tab {
-        color: var(--tab-hover);;
+        color: var(--tab-hover);
         &:after {
           transform: translateY(-100%);
         }
       }
     }
   }
-  .vertical{
+  .vertical {
+    flex-direction: column;
+  }
+  .horizontal {
     flex-direction: row;
     .tab-bar__wrapper__body-tab:after {
       position: absolute;
@@ -50,11 +54,9 @@
       left: 0;
       width: 100%;
       height: 4px;
-      background: var(--tab-hover);;
+      background: var(--tab-hover);
       @include transition;
+      border-radius: 8px 8px 0 0;
     }
-  }
-  .horizontal{
-    flex-direction: column;
   }
 }
