mobile filters scroll

--- a/src/containers/Filters/styles.module.scss
+++ b/src/containers/Filters/styles.module.scss
@@ -103,6 +103,7 @@
         display: block;
         cursor: pointer;
       }
+      overflow-y: auto;
     }
     .collections{
       display: none;
