--- a/src/containers/Header/styles.module.scss
+++ b/src/containers/Header/styles.module.scss
@@ -31,8 +31,10 @@
 }
 .user {
   @include flex(row, center, flex-start);
-  gap: 16px; // dont use with flex
   position: relative;
+  .arrowBtn {
+    margin-right: space(16);
+  }
 }
 .arrow {
   transform: rotate(0);
@@ -63,8 +65,8 @@
   );
 }
 @include large-tablet {
-  .user {
-    gap: 12px;
+  .arrowBtn {
+    margin-right: space(12) !important;
   }
   .address,
   .headerDropdown {
@@ -72,6 +74,9 @@
   }
 }
 @include large-mobile {
+  .arrowBtn {
+    margin-right: space(0) !important;
+  }
   .headerInput {
     width: 100% !important;
   }
