--- a/src/pages/Home/components/Banner/styles.module.scss
+++ b/src/pages/Home/components/Banner/styles.module.scss
@@ -56,7 +56,10 @@
         font-weight: 500;
         font-size: 36px;
         line-height: 52px;
+        text-align: center;
       }
+      justify-content: center;
+
     }
     .subtitle {
       font-size: 14px;
