--- a/src/components/Dropdown/styles.scss
+++ b/src/components/Dropdown/styles.scss
@@ -294,7 +294,7 @@
 }
 .head {
   .dropdown-content-head {
-    box-shadow: none;
+    // box-shadow: none;
     &:focus {
       box-shadow: none;
     }
