--- a/src/pages/Home/components/Trending/styles.module.scss
+++ b/src/pages/Home/components/Trending/styles.module.scss
@@ -72,7 +72,7 @@
   border-radius: 50%;
   background-position: center center;
   background-color: var(--swiper-default-background);
-  transform: translate(-50%, -50%);
+  transform: translate(0, -50%);
   white-space: nowrap;
   &::after {
     content: '';
