--- a/src/components/Checkbox/styles.scss
+++ b/src/components/Checkbox/styles.scss
@@ -9,9 +9,8 @@ $checkbox-size: 24px;
       pointer-events: none;
   }
   &-input {
+    visibility: hidden;
     position: absolute;
-    top: 0;
-    left: 0;
     width: 0;
     height: 0;
     &:focus {
