--- a/src/pages/NftPage/components/NftCreators/styles.module.scss
+++ b/src/pages/NftPage/components/NftCreators/styles.module.scss
@@ -12,18 +12,23 @@
       @include flex(row, center, flex-start);
       margin-top: space(8);
     }
-    &Text{
+    &Text {
       margin-left: space(16);
+      @include ellipsis;
     }
+  }
+  .creator + .collection{
+    margin-left: space(16);
   }
 }
 
-@include large-mobile{
-  .nftCreators{
+@include large-mobile {
+  .nftCreators {
     flex-direction: column;
     align-items: flex-start;
     .creator + .collection {
       margin-top: space(16);
+      margin-left: 0;
     }
   }
 }
